Set up initial style settings

--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="author" content="Adam Berki">
+    <title>Easy Bank | Modern Banking And Financial Solutions</title>
+    <link rel="stylesheet" href="./style/main.css">
 </head>
 <body>
-    
+    <h1 style="font-size: 54px;">Next generation digital banking</h1>
 </body>
 </html>
